代码优化
Signed-off-by: LJT1218 <ljt1218@outlook.com>